Added font-face, fixed layout issues, typography, changed theme colors.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#002D9C" />
+    <meta name="theme-color" content="#78a9ff" />
     <meta name="description" content="Glyphic → copy cool glyphs and paste to your document or message" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo-192.png" />
     <!--
