--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,14 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <!-- Site Brunch script -->
+    <!-- <script type="text/javascript" src="https://cdn.sitebrunch.com/sites/J4VDFZ.js" async data-site="J4VDFZ"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
